# Snake-Game

./: CMakeLists.txt  README.md
src/: a.out  board.cpp  main.cpp  pack.cpp  snake.cpp  snake.h
